# pacman-simple

./: README.md  main.py  pyproject.toml
