[tool.poetry]
name = "pacman_game"
version = "0.1.0"
description = "A simple Pacman game built using Pygame"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"